--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ before_install:
 script:
   - cd $TRAVIS_BUILD_DIR
   - cmake -DCMAKE_BUILD_TYPE=Release .
+  - ls
+  - ./flatjson
   - eval $CXX -O2 parsetest.cpp -o parsetest
-  - ./flatjson && ./parsetest canada.json && ./parsetest citm_catalog.json && ./parsetest jeopardy.json && ./parsetest twitter.json
+  - ./parsetest canada.json && ./parsetest citm_catalog.json && ./parsetest jeopardy.json && ./parsetest twitter.json
