--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,13 @@ compiler:
   - clang
 os:
   - linux
-before_install:
-  - echo "CC=$CC"
-  - echo "CXX=$CXX"
 script:
   - cd $TRAVIS_BUILD_DIR
   - cmake -DCMAKE_BUILD_TYPE=Release .
   - cmake --build . --config Release
-  - ls
   - ./flatjson
   - eval $CXX -O2 parsetest.cpp -o parsetest
-  - ./parsetest canada.json && ./parsetest citm_catalog.json && ./parsetest jeopardy.json && ./parsetest twitter.json
+  - ./parsetest canada.json
+  - ./parsetest citm_catalog.json
+  - ./parsetest jeopardy.json
+  - ./parsetest twitter.json
