fj_compare() was improved & fj_walk_through_tokens() now use iovec & fj_packed_state_size() + fj_pack_state() + fj_unpack_state() was implemented

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.1)
 project(flatjson)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Werror=return-type -fsanitize=address")
+set(CMAKE_CXX_FLAGS
+    "${CMAKE_CXX_FLAGS} \
+        -std=c++11 -Wall -Wextra -Werror=return-type \
+        -fsanitize=address"
+)
 
 add_definitions(
 	-UNDEBUG
@@ -9,13 +13,19 @@ add_definitions(
     #-D__FJ__DONT_PACK_TOKENS
 )
 
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")
+endif()
+
 include_directories(
     ../include
 )
 
 set(SOURCES
     ../include/flatjson/flatjson.hpp
-	main.cpp
+    ../include/flatjson/io.hpp
+    ../include/flatjson/version.hpp
+    main.cpp
     inst.cpp
 )
 
