--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,34 +16,50 @@ jobs:
           - os: ubuntu-22.04
             triplet: x64-linux
             cc: gcc
+            dont_pack_tokens: 0
+            no_exception: 0
             
           - os: ubuntu-22.04
             triplet: x32-linux
             cc: gcc
+            dont_pack_tokens: 0
+            no_exception: 0
             
           - os: ubuntu-22.04
             triplet: x64-linux
             cc: gcc
             dont_pack_tokens: 1
+            no_exception: 0
 
           - os: ubuntu-22.04
             triplet: x32-linux
             cc: gcc
             dont_pack_tokens: 1
+            no_exception: 0
 
           - os: ubuntu-22.04
             triplet: x64-linux
-            cc: gcc-latest
+            cc: gcc
+            dont_pack_tokens: 1
             no_exception: 1
-            
+
           - os: ubuntu-22.04
             triplet: x32-linux
-            cc: gcc-latest
+            cc: gcc
+            dont_pack_tokens: 1
             no_exception: 1
             
           - os: macos-latest
             triplet: x64-osx
-            cc: clang-latest
+            cc: clang
+            dont_pack_tokens: 0
+            no_exception: 0
+            
+          - os: macos-latest
+            triplet: x32-osx
+            cc: clang
+            dont_pack_tokens: 0
+            no_exception: 0
             
     runs-on: ${{ matrix.os }}
     steps:
@@ -52,8 +68,7 @@ jobs:
         env:
           TRIPLET: ${{ matrix.triplet }}
           USE_CC: ${{ matrix.cc }}
-          CI_MODE: ${{ matrix.mode }}
-          NO_EXCEPTIONS: ${{ matrix.no_exception }}
           DONT_PACK_TOKENS: ${{ matrix.dont_pack_tokens }}
+          NO_EXCEPTIONS: ${{ matrix.no_exception }}
         run: |
-          echo "TRIPLET=$TRIPLET, USE_CC=$USE_CC, CI_MODE=$CI_MODE"
+          echo "TRIPLET=$TRIPLET, USE_CC=$USE_CC, DONT_PACK_TOKENS=$DONT_PACK_TOKENS, NO_EXCEPTIONS=$NO_EXCEPTIONS"
