--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -184,7 +184,7 @@ jobs:
           DONT_PACK_TOKENS: ${{ matrix.dont_pack_tokens }}
           NO_EXCEPTIONS: ${{ matrix.no_exception }}
         run: |
-          echo "TRIPLET=$TRIPLET, DONT_PACK_TOKENS=$DONT_PACK_TOKENS, NO_EXCEPTIONS=$NO_EXCEPTIONS"
+          echo "PLATFORM=$PLATFORM, CMAKE_GENERATOR=$CMAKE_GENERATOR, DONT_PACK_TOKENS=$DONT_PACK_TOKENS, NO_EXCEPTIONS=$NO_EXCEPTIONS"
           cd test
           case "$DONT_PACK_TOKENS$NO_EXCEPTIONS" in
             "00")
@@ -204,5 +204,5 @@ jobs:
               CXX=$USE_CC cmake . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS="-fno-exceptions" -D__FJ__DONT_PACK_TOKENS=ON
             ;;
           esac
-          cmake . --build
+          cmake --build .
           flatjson.exe
