--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,22 +16,18 @@ jobs:
           - os: ubuntu-22.04
             triplet: x64-linux
             cc: g++
-            dont_pack_tokens: 0
-            
+
           - os: ubuntu-22.04
-            triplet: x64-linux
+            triplet: x32-linux
             cc: g++
-            dont_pack_tokens: 1
-            
+
           - os: macos-latest
             triplet: x64-osx
             cc: clang++
-            dont_pack_tokens: 0
-            
+
           - os: macos-latest
-            triplet: x64-osx
+            triplet: x32-osx
             cc: clang++
-            dont_pack_tokens: 1
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -42,21 +38,11 @@ jobs:
         env:
           TRIPLET: ${{ matrix.triplet }}
           USE_CC: ${{ matrix.cc }}
-          DONT_PACK_TOKENS: ${{ matrix.dont_pack_tokens }}
         run: |
-          echo "TRIPLET=$TRIPLET, USE_CC=$USE_CC, DONT_PACK_TOKENS=$DONT_PACK_TOKENS"
+          echo "TRIPLET=$TRIPLET, USE_CC=$USE_CC"
           cd test
-          case "$DONT_PACK_TOKENS" in
-            "0")
-              echo "with packing the tokens"
-              CXX=$USE_CC cmake --no-warn-unused-cli . -DCMAKE_BUILD_TYPE=Release
-            ;;
-            "1")
-              echo "WITHOUT packing the tokens"
-              CXX=$USE_CC cmake --no-warn-unused-cli . -DCMAKE_BUILD_TYPE=Release -DFJ_DONT_PACK_TOKENS=ON
-            ;;
-          esac
-          make
+          CXX=$USE_CC cmake --no-warn-unused-cli . -DCMAKE_BUILD_TYPE=Release
+          cmake --build .
           ./flatjson-test
 
   vs2019_2022_build: # job id, can be any string
@@ -67,23 +53,19 @@ jobs:
           - os: windows-latest
             generator: "Visual Studio 17 2022"
             platform: x64
-            dont_pack_tokens: 0
 
           - os: windows-latest
             generator: "Visual Studio 17 2022"
-            platform: x64
-            dont_pack_tokens: 1
+            platform: x32
 
           - os: windows-2019
             generator: "Visual Studio 16 2019"
             platform: x64
-            dont_pack_tokens: 0
-            
+
           - os: windows-2019
             generator: "Visual Studio 16 2019"
-            platform: x64
-            dont_pack_tokens: 1
-            
+            platform: x32
+
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -93,19 +75,9 @@ jobs:
         env:
           CMAKE_GENERATOR: ${{ matrix.generator }}
           PLATFORM: ${{ matrix.platform }}
-          DONT_PACK_TOKENS: ${{ matrix.dont_pack_tokens }}
         run: |
-          echo "PLATFORM=$PLATFORM, CMAKE_GENERATOR=\"$CMAKE_GENERATOR\", DONT_PACK_TOKENS=$DONT_PACK_TOKENS"
+          echo "PLATFORM=$PLATFORM, CMAKE_GENERATOR=\"$CMAKE_GENERATOR\""
           cd test
-          case "$DONT_PACK_TOKENS" in
-            "0")
-              echo "with exceptions enabled and with packed the tokens"
-              cmake --no-warn-unused-cli . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release
-            ;;
-            "1")
-              echo "WITHOUT exceptions and with packed the tokens"
-              cmake --no-warn-unused-cli . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release -DFJ_DONT_PACK_TOKENS=ON
-            ;;
-          esac
+          cmake --no-warn-unused-cli . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release
           cmake --build .
           Debug/flatjson-test.exe
