--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -41,9 +41,17 @@ jobs:
         run: |
           echo "TRIPLET=$TRIPLET, USE_CC=$USE_CC"
           cd test
-          CXX=$USE_CC cmake --no-warn-unused-cli . -DCMAKE_BUILD_TYPE=Release
+          CXX=$USE_CC cmake . -DCMAKE_BUILD_TYPE=Release
           cmake --build .
           ./flatjson-test
+          cd ../examples/c-style
+          CXX=$USE_CC cmake . -DCMAKE_BUILD_TYPE=Release
+          cmake --build .
+          ./c-style
+          cd ../cpp-style
+          CXX=$USE_CC cmake . -DCMAKE_BUILD_TYPE=Release
+          cmake --build .
+          ./cpp-style
 
   vs2019_2022_build: # job id, can be any string
     name: Visual Studio Build
@@ -78,10 +86,14 @@ jobs:
         run: |
           echo "PLATFORM=$PLATFORM, CMAKE_GENERATOR=\"$CMAKE_GENERATOR\""
           cd test
-          if [[ $PLATFORM == x32 ]]; then
-            cmake --no-warn-unused-cli . -G "$CMAKE_GENERATOR" -A Win32 -DCMAKE_BUILD_TYPE=Release
-          else
-            cmake --no-warn-unused-cli . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release
-          fi
+          cmake . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release
           cmake --build .
           Debug/flatjson-test.exe
+          cd ../examples/c-style
+          cmake . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release
+          cmake --build .
+          Debug/c-style.exe
+          cd ../examples/cpp-style
+          cmake . -G "$CMAKE_GENERATOR" -DCMAKE_BUILD_TYPE=Release
+          cmake --build .
+          Debug/cpp-style.exe
