--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror=return-type -fno-exceptions")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror=return-type -fno-exceptions -march=native -m32")
     if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fsanitize=address -D__FJ__ADDRESS_SANITIZER_ENABLED") #-fsanitize=address
     endif()
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
   # using Intel C++
@@ -17,6 +17,9 @@ endif()
 
 add_definitions(
     -UNDEBUG
+    #-DFJ_NO_TOPLEV_FJSON
+    #-DFJ_NO_TOPLEV_IO
+    #-DFJ_DONT_USE_SIMD
 )
 
 include_directories(
@@ -25,8 +28,6 @@ include_directories(
 
 set(SOURCES
     ../include/flatjson/flatjson.hpp
-    ../include/flatjson/io.hpp
-    ../include/flatjson/version.hpp
     main.cpp
     inst.cpp
 )
